# CoinAPI

./: Dockerfile  README.md  pyproject.toml  run_server.py
api/: app.py
data_layer/: settings.py
data_layer/data_access/api_client/: bybit_client.py
data_layer/data_access/crud/: crud_funding.py  crud_interest.py  crud_open_interest.py
data_layer/models/: models_api.py  models_orm.py
data_layer/services/: download_data.py
