[tool.poetry]
name = "CoinAPI"
version = "0.1.0"
description = "A database wrapped in a fastAPI to access coin data"
authors = ["Markus Musch <markus-musch@web.de>"]
packages = [
    { include = "api" },
    { include = "data_layer" }
]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.1"
pydantic = "^2.9.0"
pydantic-settings = "^2.6.1"
requests = "^2.32.3"
sqlalchemy = "^2.0.34"
fastapi = "^0.115.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "api/tests",
    "data_layer/tests"
]